# c8-emu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
include/: beeper.h  chip8.h  constants.h  platform.h
src/: beeper.cpp  chip8.cpp  main.cpp  platform.cpp
